# bloclawd

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  THREAT-MODEL.md  dist-workspace.toml  package.json  pnpm-lock.yaml  release.toml
.cargo/: config.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  lint.yml  pow.yml  release-smoke.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/decisions/: ADR-001-planetscale-tier.md
.planning/phases/01-foundations/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-06-SUMMARY.md
.planning/phases/01.5-worker-rust-migration-inserted/: 01.5-01-SUMMARY.md  01.5-02-SUMMARY.md  01.5-03-SUMMARY.md  01.5-04-SUMMARY.md  01.5-05-SUMMARY.md  01.5-HUMAN-UAT.md  01.5-REVIEW.md  01.5-VERIFICATION.md
.planning/phases/02-ingest-backbone/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-05-SUMMARY.md
.planning/phases/03-rust-cli/: 03-00-docs-amendments-SUMMARY.md  03-01-shared-types-amendments-SUMMARY.md  03-02-worker-amendment-SUMMARY.md  03-03-cli-scaffold-SUMMARY.md  03-04-parsers-aggregate-SUMMARY.md  03-05-wire-glue-SUMMARY.md  03-06-probe-render-SUMMARY.md  03-07-orchestration-fixtures-SUMMARY.md  03-HUMAN-UAT.md  03-VERIFICATION.md
.planning/phases/04-aggregation-dashboard/: 04-00-SUMMARY.md  04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-SUMMARY.md  04-05-SUMMARY.md  04-06-SUMMARY.md  04-07-SUMMARY.md  04-08-SUMMARY.md  04-09-SUMMARY.md  04-10-SUMMARY.md  04-11-SUMMARY.md  04-12-SUMMARY.md  04-13-SUMMARY.md  04-14-SUMMARY.md  04-15-SUMMARY.md  04-16-SUMMARY.md  04-17-SUMMARY.md  04-18-SUMMARY.md
.planning/research/: ARCHITECTURE.md  PITFALLS.md  STACK.md
apps/frontend/: .env.production  .env.staging  .gitignore  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wrangler.toml
apps/frontend/public/: install.sh  robots.txt  site.webmanifest
apps/frontend/scripts/: generate-icons.ts  prerender.ts
apps/frontend/src/: main.tsx  routeTree.gen.ts
apps/frontend/src/__tests__/: Chart.test.tsx  Chrome.test.tsx  DataTable.test.tsx  Filters.test.tsx  canonical.test.ts  catalog.test.ts  cohort-panels.test.tsx  dashboard.integration.test.tsx  data-page.test.tsx  drift_kpi.test.ts  home_page_ctas.test.tsx  log_bins.test.ts  r2.test.ts  rank-report.test.ts  route_shell.test.tsx  routes.test.tsx  scaffold.test.ts  setup.ts  tier-picker.test.ts  tokens.test.ts  useChartData.test.ts
apps/frontend/src/__tests__/canonical-fixtures/: cli-dryrun-expected-bytes.txt  cli-dryrun.json
apps/frontend/src/__tests__/integration/: dashboard-e2e.test.tsx
apps/frontend/src/components/: BandToggle.tsx  BreakdownTable.tsx  Brush.tsx  Chart.tsx  Chrome.tsx  CodeBlock.tsx  CompareRows.tsx  CostEquivalentPanel.tsx  DataTable.tsx  DateRangePicker.tsx  DistributionPicker.tsx  EmptyState.tsx  EnvelopeToggle.tsx  FieldAnnotation.tsx  FilterRowFields.tsx  Filters.tsx  HomeTimelinePreview.tsx  PercentilePicker.tsx  RouteShell.tsx  TierToggle.tsx  TokenMixPanel.tsx
apps/frontend/src/components/ui/: button.tsx  segmented.tsx
apps/frontend/src/lib/: canonical.ts  catalog.ts  chart-data.ts  chart-geometry.ts  chart-tokens.ts  cohort.ts  dashboard-data.ts  dashboard-search.ts  format.ts  log_bins.ts  mock-cohort.ts  mock-r2.ts  model-catalog.ts  r2.ts  rank-report.ts  rng.ts  route-head.ts  seo.ts  tier-picker.ts  use-count-up.ts
apps/frontend/src/routes/: __root.tsx  compare.tsx  dashboard.tsx  data.tsx  index.tsx  install.tsx  methodology.changelog.tsx  methodology.tsx  rank.tsx
apps/frontend/src/styles/: globals.css  tokens.css
apps/frontend/worker/: index.ts
apps/web/: tsconfig.json
apps/worker/: .gitignore  Cargo.toml  README.md  package.json  r2-cors-staging.json  r2-cors.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/worker/sql/: 0001_events.sql  0002_add_submission_group_id.sql  0003_cron_state.sql  0004_add_limit_type.sql  0005_postgres_schema_cleanup.sql
apps/worker/src/: body.rs  challenge.rs  db.rs  errors.rs  event.rs  lib.rs  pow.ts  ratelimit.rs  secret.rs  types.ts
apps/worker/src/cron/: aggregate.rs  health.rs  mod.rs  percentile.rs  r2_emit.rs  ridge.rs  state.rs  tick.rs
apps/worker/src/cron/tests/: integration_test.rs  mod.rs
apps/worker/src/cron/tests/fixtures/: golden_percentile_n12.json  golden_percentile_n21.json  golden_ridge_n12.json  golden_ridge_y1_cohort_n50.json  golden_two_sigma.json  r2_v1_schema.json
apps/worker/test/: fixtures.test.ts  pow.test.ts
apps/worker/tests/: cron_e2e_staging.rs  cron_health_staging.rs  cron_perf.rs  cron_skeleton_contract.rs  cron_state_staging.rs  db_ping_contract.rs  e2e_staging.rs
crates/cli/: Cargo.toml
crates/cli/src/: aggregate.rs  api.rs  canonical.rs  cli.rs  config.rs  lib.rs  min_version.rs  probe.rs  probe_sig.rs  region.rs  render.rs  solve.rs  submit.rs  window.rs  wire_error.rs
crates/cli/src/parsers/: cc.rs  codex.rs  mod.rs
crates/cli/tests/: fixtures_e2e.rs
crates/cli/tests/fixtures/cc/: sample.expected.dryrun.txt  sample.expected.json  sample.jsonl
crates/cli/tests/fixtures/codex/: sample.expected.dryrun.txt  sample.expected.json  sample.jsonl
crates/event-schema/: Cargo.toml
crates/event-schema/src/: catalog.rs  enums.rs  jcs.rs  lib.rs  log_bins.rs  model_prices.rs  payload.rs  region_map.rs  reports.rs  wire.rs
crates/event-schema/tests/: error_kinds.rs  fixtures.rs  jcs_conformance.rs  ts_export.rs
crates/event-schema/tests/data/rfc8785/: SOURCE.md
crates/pow/: Cargo.toml
crates/pow/src/: lib.rs
crates/pow/tests/: fixtures.rs
docs/: RELEASE.md  STAGING-ACCESS.md  SUPPORTED-VERSIONS.md
spec/: enums.json  event-schema.md  payload-canonical.md  pow-fixtures.json  pow-v1.md
xtask/: Cargo.toml
xtask/src/: anonymize_session.rs  main.rs
