# Cargo workspace for the bloclawd Rust members.
# Members include shared crates, the CLI, the Worker, and repository tooling.

[workspace]
resolver = "3"
members = [
  "crates/pow",
  "crates/event-schema",
  "crates/cli",
  "apps/worker",
  "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bloclawd/bloclawd"
authors = ["bloclawd maintainers"]
description = "Live cohort percentiles for Claude Code and Codex rate limits — see where Pro, Max5, and Max20 caps actually fire and how they drift week to week. Anonymous CLI submission, open dataset, k-anonymized at n ≥ 5."
homepage = "https://bloclawd.com"
documentation = "https://bloclawd.com/methodology"
readme = "README.md"
keywords = ["rate-limit", "claude-code", "codex", "anonymous", "subscription"]
categories = ["command-line-utilities", "development-tools::profiling"]

[workspace.dependencies]
# Pinned shared dependency versions; per-crate Cargo.toml files reference these via `workspace = true`.
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
ts-rs = "12"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
sys-locale = "0.3"
chrono = "0.4"
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
tokio = { version = "1", default-features = false, features = ["macros", "process", "time", "rt"] }
indicatif = "0.18"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release.package.bloclawd-worker]
opt-level = "s"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
