[package]
name = "bloclawd-worker"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8.1", features = ["http"] }
# An earlier prototype expected devsnek/rust-postgres@unnamed-statement, but that
# repository returned "Repository not found" on 2026-04-30. Upstream 0.7.17
# exposes the js feature and pooler-safe typed query APIs; pinned by rev for
# reproducibility. Rev captured: 35a85bdbfeeac465e092950f65a10d9192418175 on 2026-04-30.
tokio-postgres = { git = "https://github.com/rust-postgres/rust-postgres", rev = "35a85bdbfeeac465e092950f65a10d9192418175", features = ["js", "with-serde_json-1", "with-uuid-1"], default-features = false }
url = "2.5"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
thiserror = { workspace = true }
event-schema = { path = "../../crates/event-schema" }
pow = { path = "../../crates/pow" }
base64 = { workspace = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }

[features]
perf = []  # Enables synthetic-volume cron CPU benchmark in tests/cron_perf.rs (--ignored).
# End-to-end staging proof. Manually invoked only:
#   cargo test -p bloclawd-worker --features staging-smoke -- --ignored happy_path
# NOT in CI; manual to avoid per-PR row pollution and cold-start flakiness.
staging-smoke = [
  "dep:reqwest",
  "dep:tokio",
  "dep:tokio-postgres-native",
  "dep:tokio-postgres-rustls",
  "dep:rustls",
  "dep:rustls-native-certs",
  "dep:sha2",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native (non-wasm) deps for the e2e integration test in tests/e2e_staging.rs.
# Cargo rejects optional dev-dependencies, so these are target-specific optional deps.
# Gated behind the staging-smoke feature so default builds do NOT pull them.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
# Rename trick: native deps name `tokio-postgres-native` aliases crates.io tokio-postgres 0.7.x
# to avoid colliding with the pinned-rev WASM tokio-postgres in [dependencies].
# The two never coexist in a single binary because the worker is wasm32 and the test is native.
tokio-postgres-native = { package = "tokio-postgres", version = "0.7", optional = true, default-features = false, features = ["with-chrono-0_4", "with-uuid-1", "runtime"] }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
# Intentionally empty: optional dev-dependencies are invalid Cargo manifests.
