[package]
name = "bloclawd-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# Library + bin split (CONTEXT.md Claude's Discretion L92): the lib is what
# crates/cli/tests/fixtures_e2e.rs (Plan 07) calls in-process; the bin is
# the thin entry users execute as `bloclawd`.

[[bin]]
name = "bloclawd"
path = "src/bin/bloclawd.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
sys-locale = { workspace = true }
chrono = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
event-schema = { path = "../event-schema" }
pow = { path = "../pow" }
