[package]
name = "bloclawd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
# Library + bin split: integration tests call the lib in-process; the bin is
# the thin entry users execute as `bloclawd`.

[[bin]]
name = "bloclawd"
path = "src/bin/bloclawd.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
sys-locale = { workspace = true }
chrono = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
bloclawd-schema = { path = "../event-schema", version = "0.1.0" }
bloclawd-pow = { path = "../pow", version = "0.1.0" }
