[package]
name = "bloclawd-schema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }

[features]
ts-export = []

[dev-dependencies]
serde_path_to_error = "0.1"

# Opt out of cargo-dist artifact generation: this is a library crate published to
# crates.io for downstream wire-protocol consumers; it ships no compiled binary.
[package.metadata.dist]
dist = false
