[package]
name = "pow"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
