[package]
name = "bloclawd-pow"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sha2 = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

# Opt out of cargo-dist artifact generation: library crate, no compiled binary.
[package.metadata.dist]
dist = false
